kubernetes/my-app/templates/pod-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-toleration
spec:
  nodeSelector:
    gpu: no1   # 원래는 nodeSelector 설정 시 해당하는 노드에 매핑되어야 하지만, taint 적용되어 있어 매핑되지 않음
  tolerations:
  - effect: NoSchedule   # 노드 스케줄 안 됨
    key: hw
    operator: Equal
    value: gpu
  containers:
  - name: container
    image: tmkube/app
    terminationGracePeriodSeconds: 0
