kubernetes/my-app/templates/podAffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels: 
    type: web1
spec:
  nodeSelector:
    a-team: '1'
  containers:
  - name: container
    image: tmkube/app
  terminationGracePeriodSeconds: 0


apiVersion: v1
kind: Pod
metadata:
  name: server2
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - topologyKey: a-team
        labelSelector:
          matchExpressions:
          - {key: type, operator: In, values: [web2]}
  containers:
  - name: container
    image: tmkube/app
  terminationGracePeriodSeconds: 0
